added importing datasources

--- a/tasks/debug/show-state.yml
+++ b/tasks/debug/show-state.yml
@@ -24,3 +24,14 @@
   loop: "{{ bc_boot_ip }}"
   debug:
     msg: "{{ item }}"
+
+
+- name: "List monitoring ip address for {{ inventory_hostname }}"
+  tags:
+    - never
+    - debug
+    - network
+  loop: "{{ monitoring_peer_ip }}"
+  debug:
+    msg: "{{ item }}"
+
