--- a/tasks/blockchain/cyberos/main.yml
+++ b/tasks/blockchain/cyberos/main.yml
@@ -71,7 +71,10 @@
     - install_promstack == true
     - bc_cyberos_comp_state_monitoring == "present"
     - bc_component_name == "monitoring"
-  include_tasks: "metrics/{{ bc_component_name }}.yml"
+  include_tasks: "metrics/{{ item }}.yml"
+  with_items:
+    - "{{ bc_component_name }}"
+    - "targets"
 
 - name: "Install bench"
   include_tasks: "bench/main.yml"
