--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -43,6 +43,27 @@
   when: '"prod" in hostvars[item]["ansible_hostname"] or "boot" in hostvars[item]["ansible_hostname"]'
   changed_when: false
 
+- name: "Add moitnoring nodes to group monitoring_peer"
+  tags:
+    - debug
+    - network
+  delegate_to: "{{ item }}"
+  run_once: true
+  add_host:
+    name: "{{ item }}"
+    groups: monitoring_peer
+  loop: "{{ groups['all'] }}"
+  when: '"monitoring" in hostvars[item]["ansible_hostname"] or "monitoring" in hostvars[item]["ansible_hostname"]'
+  changed_when: false
+
+- name: "Set monitoring ip address"
+  run_once: true
+  tags:
+    - debug
+    - network
+  set_fact:
+    monitoring_peer_ip: "{{ groups['monitoring_peer'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+
 - name: "Set boot ip address"
   run_once: true
   tags:
