--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -5,8 +5,8 @@
   vars:
     install_cadvisor: false
     install_gateway: false
-    grafana_admin_user: "{{ grafana_admin_user }}"
-    grafana_admin_password: "{{ grafana_admin_password }}"
+    grafana_admin_user: "{{ admin_user }}"
+    grafana_admin_password: "{{ admin_password }}"
     prometheus_targets: [{jobname: "node_exporter", host: "localhost", port: "{{ node_exporter_port}}"}]
 
 - name: "Add prometheus targets to {{ inventory_hostname }}"
