--- a/tasks/docker/registry.yml
+++ b/tasks/docker/registry.yml
@@ -4,7 +4,7 @@
     name: docker
 
 - name: Login to Docker registry
-  when: bc_docker_registry_login == true
+  when: bc_docker_registry_login == "true"
   docker_login:
     registry: "{{ bc_docker_registry_url }}"
     username: "{{ bc_docker_username }}"
