--- a/tasks/bench/main.yml
+++ b/tasks/bench/main.yml
@@ -1,11 +1,13 @@
 ---
 - name: "Create dirs"
   file:
-    path: "{{ item }}"
+    path: "{{ dir }}"
     state: directory
   with_items:
     - "{{ bc_path_general }}/bench"
     - "{{ bc_path_general }}/bench/config"
+  loop_control:
+    loop_var: dir
 
 - name: "Create config"
   template:
@@ -17,7 +19,7 @@
     src: scripts/bin/bench.j2
     dest: /usr/bin/bench
     mode: 0755
-    
+
 - name: "Pull docker container"
   docker_image:
     name: registry.gitlab.com/cyberos/infrastructure/bench-tool:latest
