--- a/tasks/blockchain/cyberos/boot.yml
+++ b/tasks/blockchain/cyberos/boot.yml
@@ -41,7 +41,7 @@
 - name: Start boot-node container
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
-    image: registry.gitlab.com/cyberos/infrastructure/cyberos:latest
+    image: rregistry.gitlab.com/cyberos/infrastructure/cyberos-dev:develop-latest
     command: /opt/eosio/bin/nodeos --config-dir={{ bc_path_config }} --genesis-json={{ bc_path_config }}/genesis.json
     hostname: "{{ bc_name }}-{{ bc_component_name }}"
     network_mode: host
