--- a/tasks/blockchain/cyberos/boot.yml
+++ b/tasks/blockchain/cyberos/boot.yml
@@ -42,7 +42,7 @@
   register: _start_boot_node
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
-    image: registry.gitlab.com/cyberos/infrastructure/cyberos:develop-latest
+    image: "{{ bc_cyberos_image }}"
     command: /opt/eosio/bin/nodeos --config-dir={{ bc_path_config }} --genesis-json={{ bc_path_config }}/genesis.json
     hostname: "{{ bc_name }}-{{ bc_component_name }}"
     network_mode: host
