--- a/defaults/main/haya.yml
+++ b/defaults/main/haya.yml
@@ -1,48 +1,48 @@
 ---
-# cyberos.yml
+# haya.yml
 
-bc_cyberos_comp_state_wallet: absent
-bc_cyberos_comp_state_boot: absent
-bc_cyberos_comp_state_prod: absent
-bc_cyberos_comp_state_monitoring: absent
-bc_cyberos_comp_state_bench: absent
+bc_haya_comp_state_wallet: absent
+bc_haya_comp_state_boot: absent
+bc_haya_comp_state_prod: absent
+bc_haya_comp_state_monitoring: absent
+bc_haya_comp_state_bench: absent
 
-bc_cyberos_image: "registry.gitlab.com/cyberos/infrastructure/cyberos:latest"
-bc_cyberos_plugin_randpa: "absent"
+bc_haya_image: "mixbytes/haya"
+bc_haya_plugin_randpa: "absent"
 
-bc_cyberos_cli: "docker run --rm --network=host -v /:/host:ro registry.gitlab.com/cyberos/infrastructure/cyberos:latest /opt/eosio/bin/cleos "
+bc_haya_cli: "docker run --rm --network=host -v /:/host:ro mixbytes/haya /opt/eosio/bin/cleos "
 
-bc_cyberos_boot:
+bc_haya_boot:
   public_ip: "{{ ansible_default_ipv4.address }}"
-  public_port: "{{ bc_cyberos_node_bnet_port }}"
+  public_port: "{{ bc_haya_node_bnet_port }}"
   name: eosio
   pub_key: EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV
   pvt_key: 5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3
 
-bc_cyberos_wallet:
+bc_haya_wallet:
   port: 6666
 
-bc_cyberos_system_accounts:
+bc_haya_system_accounts:
   - eosio.token
 
-bc_cyberos_system_contracts:
+bc_haya_system_contracts:
   - { name: eosio, wasm_path: eosio.bios/eosio.bios.wasm, abi_path: eosio.bios/eosio.bios.abi }
   - { name: eosio.token, wasm_path: eosio.token/eosio.token.wasm, abi_path: eosio.token/eosio.token.abi }
 
-bc_cyberos_node_id: "1"
-bc_cyberos_node_http_port: 8888
-bc_cyberos_node_p2p_port: 9876
-bc_cyberos_node_bnet_port: 4321
-bc_cyberos_node_metrics_port: 8889
+bc_haya_node_id: "1"
+bc_haya_node_http_port: 8888
+bc_haya_node_p2p_port: 9876
+bc_haya_node_bnet_port: 4321
+bc_haya_node_metrics_port: 8889
 
-bc_cyberos_isproduction_enabled: "true"
-bc_cyberos_tokens_amount: 10000000000
+bc_haya_isproduction_enabled: "true"
+bc_haya_tokens_amount: 10000000000
 
-bc_cyberos_producer_name: "{{ bc_cyberos_boot.name }}"
-bc_cyberos_producer_pub_key: "{{ bc_cyberos_boot.pub_key }}"
-bc_cyberos_producer_pvt_key: "{{ bc_cyberos_boot.pvt_key }}"
+bc_haya_producer_name: "{{ bc_haya_boot.name }}"
+bc_haya_producer_pub_key: "{{ bc_haya_boot.pub_key }}"
+bc_haya_producer_pvt_key: "{{ bc_haya_boot.pvt_key }}"
 
-bc_cyberos_producer_accounts:
+bc_haya_producer_accounts:
   - { name: producer.1, pvt_key: 5JpDsXfyJeNCT97ymj3XGCxD6U66FCQRokF37kF1sR9gP9y44pD, pub_key: EOS7ChvqY6PCMZD9gAQqQSsgEryeTDixX66zdbTytzD3VgFjj2vhN }
   - { name: producer.2, pvt_key: 5K4LcspHgGpwHGXyZtaaBPofhkkSMrRzYaXNa1gRQnafCrahGGX, pub_key: EOS8BFnevDViGesin1ZorbHMuFjdysEbdP1Yxyhv74S438WKK6auW }
   - { name: producer.3, pvt_key: 5Jp58aESJzRui7YTcxrPZMJ4CbwQsTZJzjzaLQWGUcbTZEfHmcR, pub_key: EOS5aTsAvF7ysvf1gam4ymZKrQjbWLa4ob8TDeUr1F9Bwe7qWYHEu }
