--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -1,8 +1,8 @@
 ---
-# defaults file for ansible-cyberos
+# defaults file for ansible-haya
 bc_debug: false
 bc_private_interface: enp0s8
-bc_name: cyberos
+bc_name: haya
 # may be: wallet, nodeos-boot, nodeos-prod, nodeos-nonprod
 bc_component_name: "wallet"
 
