--- a/molecule/monitoring/molecule.yml
+++ b/molecule/monitoring/molecule.yml
@@ -47,7 +47,7 @@ platforms:
 provisioner:
   name: ansible
   playbooks:
-    converge: ../../playbook.yml
+    converge: playbook.yml
   config_options:
     defaults:
       callback_whitelist: profile_tasks
