--- a/playbook.yml.example
+++ b/playbook.yml.example
@@ -9,12 +9,12 @@
     bc_docker_registry_url: registry.gitlab.com
     bc_docker_username: andrey@mixbytes.io
     bc_docker_password: secret
-    bc_cyberos_comp_state_wallet: present
-    bc_cyberos_comp_state_boot: present
-    bc_cyberos_comp_state_bench: present
+    bc_haya_comp_state_wallet: present
+    bc_haya_comp_state_boot: present
+    bc_haya_comp_state_bench: present
     install_promstack: true
   roles:
-    - role: ansible-cyberos
+    - role: tank.ansible-haya
 
 - name: Converge producer node
   hosts: "*producer*"
@@ -25,19 +25,19 @@
     bc_docker_registry_url: registry.gitlab.com
     bc_docker_username: andrey@mixbytes.io
     bc_docker_password: secret
-    bc_cyberos_comp_state_prod: present
-    bc_cyberos_comp_state_bench: present
+    bc_haya_comp_state_prod: present
+    bc_haya_comp_state_bench: present
     install_promstack: true
-    bc_cyberos_node_id: "{{ play_hosts.index(inventory_hostname) | int +1 }}"
+    bc_haya_node_id: "{{ play_hosts.index(inventory_hostname) | int +1 }}"
   roles:
-    - role: ansible-cyberos
+    - role: tank.ansible-haya
 
 - name: Converge monitoring node
   hosts: "*monitoring*"
   become: true
   vars:
     rpcUrl: "rpcUrl"
-    bc_cyberos_comp_state_monitoring: present
+    bc_haya_comp_state_monitoring: present
     install_promstack: true
   roles:
-    - role: ansible-cyberos
+    - role: tank.ansible-haya
