--- a/tasks/blockchain/haya/main.yml
+++ b/tasks/blockchain/haya/main.yml
@@ -19,7 +19,7 @@
 
 - name: "Setup {{ bc_name }}-{{ bc_component_name }} container"
   when:
-    - bc_cyberos_comp_state_wallet == "present"
+    - bc_haya_comp_state_wallet == "present"
   include_tasks: "blockchain/{{ bc_name }}/{{ bc_component_name }}.yml"
 
 - name: "Set components to boot"
@@ -28,13 +28,13 @@
 
 - name: "Setup {{ bc_name }}-{{ bc_component_name }} container"
   when:
-    - bc_cyberos_comp_state_boot == "present"
+    - bc_haya_comp_state_boot == "present"
   include_tasks: "blockchain/{{ bc_name }}/{{ bc_component_name }}.yml"
 
 - name: "Setup metrics to {{ bc_component_name }}"
   when:
     - install_promstack == true
-    - bc_cyberos_comp_state_boot == "present"
+    - bc_haya_comp_state_boot == "present"
     - not bc_component_name == "monitoring"
   include_tasks: "metrics/{{ bc_component_name }}.yml"
 
@@ -50,13 +50,13 @@
     - prod
     - resume
   when:
-    - bc_cyberos_comp_state_prod == "present"
+    - bc_haya_comp_state_prod == "present"
   include_tasks: "blockchain/{{ bc_name }}/{{ bc_component_name }}.yml"
 
 - name: "Setup metrics to {{ bc_component_name }}"
   when:
     - install_promstack == true
-    - bc_cyberos_comp_state_prod == "present"
+    - bc_haya_comp_state_prod == "present"
     - not bc_component_name == "monitoring"
   include_tasks: "metrics/{{ bc_component_name }}.yml"
 
@@ -69,7 +69,7 @@
 - name: "Setup metrics to {{ bc_component_name }}"
   when:
     - install_promstack == true
-    - bc_cyberos_comp_state_monitoring == "present"
+    - bc_haya_comp_state_monitoring == "present"
     - bc_component_name == "monitoring"
   include_tasks: "metrics/{{ item }}.yml"
   with_items:
@@ -79,4 +79,4 @@
 - name: "Install bench"
   include_tasks: "bench/main.yml"
   when:
-    - bc_cyberos_comp_state_bench == "present"
+    - bc_haya_comp_state_bench == "present"
