--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -70,7 +70,7 @@
 
 - name: Copy dashboard
   template:
-    src: "grafana/cyberos/dashboard.json.j2"
+    src: "grafana/haya/dashboard.json.j2"
     dest: "/root/dashboard.json"
   register: dashboard
   when: slughttpresponse.status == 404
