--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: tank_haya
   author: Andrey Levkin
   description: Setup haya blockchain components.
   company: MixBytes
@@ -11,9 +12,9 @@ galaxy_info:
   github_branch: master
 
   platforms:
-  - name: Ubuntu
-    versions:
-    - 18.04
+    - name: Ubuntu
+      versions:
+        - 18.04
 
   galaxy_tags:
     - bench
