--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,7 +17,7 @@ platforms:
 provisioner:
   name: ansible
   playbooks:
-    converge: ../../playbook.yml
+    converge: playbook.yml
   config_options:
     defaults:
       callback_whitelist: profile_tasks
