--- a/tasks/blockchain/haya/boot.yml
+++ b/tasks/blockchain/haya/boot.yml
@@ -29,7 +29,7 @@
     dest: "{{ bc_path_config }}/accounts.json"
 
 - debug:
-    var: "{{item}}"
+    var: "{{ item }}"
   with_items:
     - bc_haya_node_http_port
     - bc_haya_node_p2p_port
@@ -53,7 +53,7 @@
     capabilities:
       - IPC_LOCK
     stop_timeout: 600
-    pull: yes
+    pull: true
 
 - pause:
     seconds: 25
@@ -61,7 +61,7 @@
     - _start_boot_node is changed
 
 - debug:
-    var: "{{item}}"
+    var: "{{ item }}"
   with_items:
     - producer_account.pvt_key
   tags:
@@ -90,7 +90,9 @@
   loop: "{{ bc_haya_system_accounts }}"
   register: create_system_accounts
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} create account -x 45 eosio {{ item }} {{ bc_haya_boot.pub_key }} {{ bc_haya_boot.pub_key }}"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }} create account -x 45 eosio {{ item }} {{ bc_haya_boot.pub_key }} {{ bc_haya_boot.pub_key }}"
   failed_when: "('Account name already exists' not in create_system_accounts.stderr) and create_system_accounts.rc != 0"
   changed_when: "'executed transaction' in create_system_accounts.stdout"
 
@@ -113,7 +115,10 @@
   register: set_code_system_contracts
   shell:
     chdir: "{{ bc_path_config }}/contracts"
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} set code {{ item.name }} /host/$PWD/{{ item.wasm_path }}"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    set code {{ item.name }} /host/$PWD/{{ item.wasm_path }}"
   failed_when: "('already exists' not in set_code_system_contracts.stderr) and set_code_system_contracts.rc != 0"
   changed_when: "'Setting Code' in set_code_system_contracts.stdout"
 
@@ -130,7 +135,10 @@
   register: set_abi_system_contracts
   shell:
     chdir: "{{ bc_path_config }}/contracts"
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} set abi {{ item.name }} /host/$PWD/{{ item.abi_path }}"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    set abi {{ item.name }} /host/$PWD/{{ item.abi_path }}"
   failed_when: "('already exists' not in set_abi_system_contracts.stderr) and set_abi_system_contracts.rc != 0"
   changed_when: "'Setting ABI' in set_abi_system_contracts.stdout"
 
@@ -145,7 +153,11 @@
 - name: create token
   register: create_token
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} push action eosio.token create '[\"eosio\", \"{{ bc_haya_tokens_amount }} EOS\"]' -p eosio.token"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    push action eosio.token create '[\"eosio\", \"{{ bc_haya_tokens_amount }}
+    EOS\"]' -p eosio.token"
   failed_when: "('already exists' not in create_token.stderr) and create_token.rc != 0"
   changed_when: "'executed transaction' in create_token.stdout"
 
@@ -159,7 +171,11 @@
 - name: allocate tokens
   register: allocate_tokens
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} push action eosio.token issue '[\"eosio\", \"{{ bc_haya_tokens_amount }} EOS\", \"memo\"]' -p eosio"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    push action eosio.token issue '[\"eosio\", \"{{ bc_haya_tokens_amount }}
+    EOS\", \"memo\"]' -p eosio"
   failed_when: "('quantity exceeds available supply' not in allocate_tokens.stderr) and allocate_tokens.rc != 0"
   changed_when: "'executed transaction' in allocate_tokens.stdout"
 
@@ -174,7 +190,11 @@
   loop: "{{ bc_haya_producer_accounts }}"
   register: create_producers_account
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} create account -x 45 eosio {{ item.name }} {{ item.pub_key }} {{ item.pub_key }}"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    create account -x 45 eosio {{ item.name }} {{ item.pub_key }}
+    {{ item.pub_key }}"
   failed_when: "('Account name already exists' not in create_producers_account.stderr) and create_producers_account.rc != 0"
   changed_when: "'executed transaction' in create_producers_account.stdout"
   retries: 5
@@ -195,7 +215,10 @@
 - name: form producers list
   loop: "{{ bc_haya_producer_accounts | list }}"
   set_fact:
-    my_prods: "{{ my_prods|default([{'producer_name': 'eosio', 'block_signing_key': 'EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV'}]) + [{'producer_name': item.name, 'block_signing_key': item.pub_key}] }}"
+    my_prods: "{{ my_prods|default([{'producer_name': 'eosio',
+    'block_signing_key':
+      'EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV'}])
+      + [{'producer_name': item.name, 'block_signing_key': item.pub_key}] }}"
   when: bc_peers_ip|length > index + 1
   loop_control:
     index_var: index
@@ -203,7 +226,10 @@
 - name: set producers
   register: set_producers
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} --url=http://localhost:{{ bc_haya_node_http_port }} push action eosio setprods '[{{my_prods | to_json}}]' -p eosio"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    --url=http://localhost:{{ bc_haya_node_http_port }}
+    push action eosio setprods '[{{ my_prods | to_json }}]' -p eosio"
   failed_when: "('Account name already exists' not in set_producers.stderr) and set_producers.rc != 0"
   changed_when: "'executed transaction' in set_producers.stdout"
 
