--- a/tasks/metrics/prod.yml
+++ b/tasks/metrics/prod.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Setup promstack at {{ inventory_hostname }}"
   include_role:
-    name: ansible-promstack
+    name: mixbytes.promstack
   vars:
     install_prometheus: false
     install_grafana: false
