--- a/tasks/blockchain/haya/wallet.yml
+++ b/tasks/blockchain/haya/wallet.yml
@@ -11,9 +11,13 @@
 - name: "Start {{ bc_name }} container"
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
-    image: mixbytes/haya
-    command: /opt/eosio/bin/keosd --unlock-timeout=99999999 --wallet-dir {{ bc_path_data }} --http-server-address=0.0.0.0:{{ bc_haya_wallet.port }} --http-alias=keosd:{{ bc_haya_wallet.port }} --http-alias=localhost:{{ bc_haya_wallet.port }}
-    hostname: haya-keosd
+    image: "{{ bc_haya_image }}"
+    command: "/opt/haya/bin/haya-wallet
+    --unlock-timeout=99999999 --wallet-dir {{ bc_path_data }}
+    --http-server-address=0.0.0.0:{{ bc_haya_wallet.port }}
+    --http-alias=haya-wallet:{{ bc_haya_wallet.port }}
+    --http-alias=localhost:{{ bc_haya_wallet.port }}"
+    hostname: haya-wallet
     ports:
       - "{{ bc_haya_wallet.port }}:{{ bc_haya_wallet.port }}"
     expose:
@@ -28,7 +32,9 @@
 
 - name: Create default wallet
   shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{bc_haya_wallet.port}} wallet create --to-console"
+    cmd: "{{ bc_haya_cli }}
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
+    wallet create --to-console"
   register: create_wallet
   failed_when: "'Wallet already exists' not in create_wallet.stderr and create_wallet.rc != 0"
   changed_when: "'Creating wallet' in create_wallet.stdout"
