--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 ---
 sudo: required
 language: python
-services:
-  - docker
 before_install:
   - sudo apt-get -qq update
 install:
   - pip install molecule
 script:
   - molecule lint
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/?branch=master
