--- a/tasks/blockchain/haya/prod.yml
+++ b/tasks/blockchain/haya/prod.yml
@@ -60,8 +60,8 @@
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
     image: "{{ bc_haya_image }}"
-    command: /opt/eosio/bin/nodeos --config-dir={{ bc_path_config }} --genesis-json={{ bc_path_config }}/genesis.json
-    hostname: "{{bc_name}}-{{ bc_component_name }}"
+    command: /opt/haya/bin/haya-node --config-dir={{ bc_path_config }} --genesis-json={{ bc_path_config }}/genesis.json
+    hostname: "{{ bc_name }}-{{ bc_component_name }}"
     network_mode: host
     volumes:
       - "{{ bc_path_state }}:/root/.local"
