--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -39,10 +39,7 @@
 
 - name: Form slug from Title
   shell: |
-    set -o pipefail
     echo "{{ Title }}" | sed -e "s/ /-/g" | tr '[:upper:]' '[:lower:]'
-  args:
-    executable: /bin/bash
   register: slugout
 
 - name: Set slug
@@ -60,10 +57,7 @@
 
 - name: Get dashboard uid
   shell: |
-    set -o pipefail
     cat /root/dashboard.json | grep uid | sed -e s/uid//g | tr -d ', ":'
-  args:
-    executable: /bin/bash
   register: uid_from_file
 
 - name: Check dashboard exist by slug
@@ -100,8 +94,8 @@
         imported: true
   when:
     - slughttpresponse.status == 404
-    - dashboard_exist.stat.exists
-    - imported
+    - not dashboard_exist.stat.exists
+    - not imported
 
 - name: "Reimport Grafana dashboard (if dashboard file changed)"
   block:
