--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -16,7 +16,7 @@
     dest: "/etc/prometheus/targets/{{ target_ip }}.yml"
   vars:
     - target_ports: ["8080", "9100", "8889"]
-  when: install_promstack == "true"
+  when: install_promstack
   loop_control:
     loop_var: target_ip
 
