Changes for tests and Ansible Galaxy autoimport

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,8 @@ install:
 script:
   - molecule lint
 notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/?branch=master
+  webhooks:
+    urls:
+      - https://galaxy.ansible.com/api/v1/notifications/?branch=master
+    on_failure: never
+
