--- a/tasks/blockchain/haya/prod.yml
+++ b/tasks/blockchain/haya/prod.yml
@@ -40,6 +40,8 @@
   template:
     src: configs/nodeos/config.ini.j2
     dest: "{{ bc_path_config }}/config.ini"
+  notify:
+    - restart prodnode
 
 - name: set genesis.json
   tags:
@@ -47,6 +49,8 @@
   template:
     src: configs/nodeos/genesis.json.j2
     dest: "{{ bc_path_config }}/genesis.json"
+  notify:
+    - restart prodnode
 
 - name: set accounts.json
   tags:
@@ -54,13 +58,28 @@
   template:
     src: configs/nodeos/accounts.json.j2
     dest: "{{ bc_path_config }}/accounts.json"
+  notify:
+    - restart prodnode
+
+- name: set logger.json
+  tags:
+    - prod
+  template:
+    src: configs/nodeos/logger.json.j2
+    dest: "{{ bc_path_config }}/logger.json"
+  notify:
+    - restart prodnode
 
 - name: "Start {{ bc_name }}-{{ bc_component_name }} container"
   register: "{{ bc_name }}_{{ bc_component_name }}"
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
     image: "{{ bc_haya_image }}"
-    command: /opt/haya/bin/haya-node --config-dir={{ bc_path_config }} --genesis-json={{ bc_path_config }}/genesis.json
+    command: |
+      /opt/haya/bin/haya-node
+      --config-dir={{ bc_path_config }}
+      --genesis-json={{ bc_path_config }}/genesis.json
+      --logconf={{ bc_path_config }}/logger.json
     hostname: "{{ bc_name }}-{{ bc_component_name }}"
     network_mode: host
     volumes:
