Update bench and refactoring dyngroups

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 install:
   - pip install molecule
 script:
-  - molecule lint
+  - ansible-lint .
 notifications:
   webhooks:
     urls:
