--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -71,30 +71,34 @@
   register: slughttpresponse
 
 - name: Copy dashboard
+  become: false
+  delegate_to: 127.0.0.1
   template:
     src: "grafana/haya/dashboard.json.j2"
-    dest: "/root/dashboard.json"
+    dest: "/tmp/dashboard.json"
   register: dashboard
   when: slughttpresponse.status == 404
 
 - name: Import Grafana dashboard (if not imported)
   block:
     - name: "Create dashboard"
+      become: false
+      delegate_to: 127.0.0.1
       grafana_dashboard:
         grafana_url: "http://localhost:3000"
         grafana_user: "{{ admin_user }}"
         grafana_password: "{{ admin_password }}"
         state: present
         message: "Imported"
-        overwrite: true
-        path: "/root/dashboard.json"
+        overwrite: yes
+        slug: '0000000012'
+        path: "/tmp/dashboard.json"
 
     - name: "Set imported to true"
       set_fact:
         imported: true
   when:
-    - slughttpresponse.status == 404
-    - not dashboard_exist.stat.exists
+    - slughttpresponse.status != 412
     - not imported
 
 - name: "Reimport Grafana dashboard (if dashboard file changed)"
