Fix creating Haya system account

--- a/defaults/main/haya.yml
+++ b/defaults/main/haya.yml
@@ -22,7 +22,7 @@ bc_haya_boot:
 bc_haya_wallet:
   port: 6666
 
-bc_haya_logger_level: "warn"
+bc_haya_logger_level: "debug"
 bc_haya_logger_enabled: "true"
 bc_haya_logger_additivity: "false"
 
